--- a/server/wwwroot/manifest.json
+++ b/server/wwwroot/manifest.json
@@ -1,7 +1,7 @@
  
 {
   "lang": "en",
-  "name": "bo-Pi",
+  "name": "Bailey",
   "icons": [
     {
       "src": "./icons/launcher-icon-0-75x.png",
