Update package and install

--- a/server/app/package.json
+++ b/server/app/package.json
@@ -15,7 +15,8 @@
 	"opencv": "3.x.x"
 	},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Paolo Negrini",
   "license": "MIT",
