--- a/server/app/config.json
+++ b/server/app/config.json
@@ -38,10 +38,13 @@
     "port": 9999,
     "videoWidth": 320,
     "videoHeight": 240,
-    "fps": 5,
-    "crosshair": true,
-    "overlayInfo": true,
-    "onScreenColor": "[0, 255, 0]"
+    "fps": 24,
+    "drawCrosshair": true,
+    "drawOverlayInfo": true,
+    "drawCompass": true,
+    "onScreenColor": "[0, 255, 0]",
+    "fontBaseSize": "0.5",
+    "hudColor": "[0, 255, 0]"
   }
   
 }
