--- a/server/app/package.json
+++ b/server/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bot-PI",
+  "name": "bot-Pi",
   "version": "2.0.0",
   "description": "Node application to control robots",
   "main": "server.js",
