Updated arduino firmware to use DMP

--- a/server/app/config.json
+++ b/server/app/config.json
@@ -7,7 +7,7 @@
     "version": "2",
     "nodeLib": "",
     "SNFolder": "/home/odroid/Documents/SN/",
-    "installPath": "/home/odroid/bot-Pi/",
+    "installPath": "/home/odroid/bot/",
     "logfilePath": "/home/odroid/Documents/log/",
     "empty":"N/A"
   },
@@ -38,10 +38,10 @@
     "port": 9999,
     "videoWidth": 320,
     "videoHeight": 240,
-    "fps": 24,
-    "drawCrosshair": false,
+    "fps": 15,
+    "drawCrosshair": true,
     "drawOverlayInfo": true,
-    "drawCompass": false,
+    "drawCompass": true,
     "onScreenColor": "[0, 255, 0]",
     "fontBaseSize": "0.5",
     "hudColor": "[0, 255, 0]"
