--- a/server/app/package.json
+++ b/server/app/package.json
@@ -23,6 +23,6 @@
 "engine": "node 0.12.7",
 "repository" :
   { "type" : "git"
-  , "url" : "https://github.com/pfnegrini/bot-Pi.git"
+  , "url" : "https://github.com/pfnegrini/ubuntuBot.git"
   }
 }
