--- a/server/app/package.json
+++ b/server/app/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "express": "x.x.x",
-    "nconf": "0.x.x",
+    "nconf": "x.x.x",
     "events": "x.x.x",
     "bunyan": "x.x.x",
-    "fs": "0.x.x",
+    "fs": "x.x.x",
     "serialport": "x.x.x",
-    "safefs": "4.x.x",
+    "safefs": "x.x.x",
     "socket.io": "x.x.x",
     "opencv4nodejs": "x.x.x"
   },
@@ -20,7 +20,7 @@
   },
   "author": "Paolo Negrini",
   "license": "MIT",
-  "engine": "node 0.12.7",
+  "engine": "node v14.4.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pfnegrini/ubuntuBot.git"
