--- a/server/app/config.json
+++ b/server/app/config.json
@@ -7,7 +7,7 @@
     "version": "2",
     "nodeLib": "",
     "SNFolder": "/home/pi/Documents/SN/",
-    "installPath": "/home/pi/bot/",
+    "installPath": "/home/pi/ubuntuBOt/",
     "logfilePath": "/home/pi/Documents/log/",
     "empty":"N/A"
   },
