video.js updated to ocv 4

--- a/server/app/config.json
+++ b/server/app/config.json
@@ -38,7 +38,9 @@
     "port": 9999,
     "videoWidth": 320,
     "videoHeight": 240,
-    "fps": 10,
+    "videoSource": 0,
+    "FPS": 20,
+    "screenMargin": 3,
     "drawCrosshair": false,
     "drawOverlayInfo": true,
     "drawCompass": true,
