--- a/server/app/config.json
+++ b/server/app/config.json
@@ -44,9 +44,9 @@
     "drawCrosshair": false,
     "drawOverlayInfo": true,
     "drawCompass": true,
-    "onScreenColor": "[0, 255, 0]",
+    "onScreenColor": "0, 255, 0",
     "fontBaseSize": "0.5",
-    "hudColor": "[0, 255, 0]"
+    "hudColor": "0, 255, 0"
   }
 
 }
