--- a/server/app/config.json
+++ b/server/app/config.json
@@ -38,7 +38,7 @@
     "port": 9999,
     "videoWidth": 320,
     "videoHeight": 240,
-    "videoSource": 0,
+    "videoSource": "0",
     "FPS": 20,
     "screenMargin": 3,
     "drawCrosshair": false,
